--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,16 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
-        "simplesoftwareio/simple-qrcode": "~2",
+        "caffeinated/shinobi": "^3.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.4.0",
+        "maatwebsite/excel": "~2.0",
+        "simplesoftwareio/simple-qrcode": "~2",
         "webpatser/laravel-uuid": "^3.0",
         "yajra/laravel-datatables-buttons": "^3.0",
-        "yajra/laravel-datatables-oracle": "~8.0",
-        "maatwebsite/excel": "~2.0"
+        "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
